--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ DerivedData
 # Carthage/Checkouts
 
 Carthage/Build
+Example/Pods/*
+Example/podfile.lock
+Example/*.xcworkspace
 
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
